[project]
name = "morning-alarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycaw",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "selenium>=4.31.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
